# spwnmsg-core

./: Cargo.toml  README.md
src/: lib.rs  packet.rs  snowflake.rs
src/base_types/: auth.rs  mod.rs  packet.rs
src/server/: mod.rs
