[package]
name = "spwnmsg-core"
version = "0.1.1"
edition = "2021"
description = "Core types for spwnmsg, a messaging client currently in the works"
license = "BSD-3-Clause"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
parking_lot = "0.11.2"
lazy_static = "1.4.0"
rand = "0.8.4"
tokio = { version = "1.14.0", features = ["full"] }